# CorterisTenderAI

./: .gitignore  AGENTS.md  DASHBOARD_VISUAL_REVIEW_CHECKLIST.md  INSTALL_PATCH.md  INSTALL_PATCH.txt  README.md  README_APPLY.txt  README_COMMIT_71.txt  TEST_RESULTS.txt  TEST_RESULTS_RELEASE_1_2_1_COMPLETE.txt  TEST_RESULTS_RELEASE_1_2_1_STEP_1.txt  TEST_RESULTS_V1_3.txt  TEST_RESULTS_V1_4.txt  TEST_RESULTS_V1_5.txt  TEST_RESULTS_V1_5_1_SPRINT_1_1.txt  TEST_RESULTS_V1_5_1_SPRINT_1_2_1.txt  build_console.txt  demo_run.txt  demo_run_v1_1.txt  demo_run_v1_4.txt  pyproject.toml  requirements-build.txt  requirements.txt
.github/: pull_request_template.md
app/: bootstrap.py  main.py
config/: commercial_providers.example.json
data/: brands_ru.json  demo_tenders.json  equipment_catalog.json  equipment_import_example.csv  price_catalog.xlsx  price_offers.json  price_offers_import_example.csv
demo_output/: Запрос_на_разъяснение.docx  Коммерческое_предложение.docx  Таблица_соответствия.xlsx
demo_output_v1_1/: Запрос_на_разъяснение.docx  Коммерческое_предложение.docx  Таблица_соответствия.xlsx
demo_output_v1_5/: price_search_demo.json
docs/: 00_PROJECT_VISION.md  API.md  ARCHITECTURE.md  BUILD_WINDOWS.md  COLLECTOR.md  COLLECTOR_OPERATIONS.md  CORTERIS_TENDER_COLLECTOR_AUDIT.md  CORTERIS_TENDER_COLLECTOR_C10_PARTICIPATION_SCORE.md  CORTERIS_TENDER_COLLECTOR_C11_FULL_ANALYSIS.md  CORTERIS_TENDER_COLLECTOR_C12_RELEASE.md  CORTERIS_TENDER_COLLECTOR_C13_PROVENANCE_VERIFICATION.md  CORTERIS_TENDER_COLLECTOR_C14_VERIFICATION_UI.md  CORTERIS_TENDER_COLLECTOR_C15_COMPANY_CAPABILITY.md  CORTERIS_TENDER_COLLECTOR_C15_FRESHNESS_TIMEZONES.md  CORTERIS_TENDER_COLLECTOR_C16_MONEY_PRECISION.md  CORTERIS_TENDER_COLLECTOR_C16_STOP_FACTOR_ENGINE.md  CORTERIS_TENDER_COLLECTOR_C17_CURRENCY_POLICY.md  CORTERIS_TENDER_COLLECTOR_C17_MATCHING_CATALOG.md  CORTERIS_TENDER_COLLECTOR_C18_COMMERCIAL_ESTIMATOR.md  CORTERIS_TENDER_COLLECTOR_C18_VERIFIED_FX.md  CORTERIS_TENDER_COLLECTOR_C19_CBR_HISTORY.md  CORTERIS_TENDER_COLLECTOR_C19_VERTICAL_SOURCE.md  CORTERIS_TENDER_COLLECTOR_C20_AGGREGATOR_DISCOVERY.md  CORTERIS_TENDER_COLLECTOR_C3.md  CORTERIS_TENDER_COLLECTOR_C4_EIS.md  CORTERIS_TENDER_COLLECTOR_C5_MOS_SUPPLIER.md  CORTERIS_TENDER_COLLECTOR_C6_COMMERCIAL.md  CORTERIS_TENDER_COLLECTOR_C7_PROVIDER_UI.md  CORTERIS_TENDER_COLLECTOR_C8_RUN_UI.md  CORTERIS_TENDER_COLLECTOR_C9_SCHEDULER.md  CORTERIS_TENDER_COLLECTOR_ROADMAP_C13_C20.md  DEFINITION_OF_DONE.md  EIS_CONNECTOR.md  EIS_PARSER_ARCHITECTURE.md  EIS_PARSER_OPERATIONS.md  EIS_PARSER_STAGE_1_AUDIT.md  EQUIPMENT_IMPORT.md  (+264 more)
(+865 files in other folders)
