[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corteris-tender-ai"
version = "1.5.1"
description = "Windows MVP для анализа тендерной документации ООО КОРТЕРИС"
requires-python = ">=3.12,<3.14"
dependencies = [
  "PySide6>=6.8,<7",
  "SQLAlchemy>=2.0,<3",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "pypdf>=5,<7",
  "Jinja2>=3.1,<4",
  "platformdirs>=4.3,<5",
  "keyring>=25,<26",
  "cryptography>=43,<46",
  "py7zr>=0.22,<1",
  "rarfile>=4.2,<5",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.9,<1", "mypy>=1.13,<2", "pyinstaller>=6.11,<7"]

[tool.pytest.ini_options]
pythonpath=["."]
testpaths=["tests"]

[tool.ruff]
line-length=100
target-version="py312"
