[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corteris-tender-ai"
version = "1.5.1"
description = "Windows MVP для анализа тендерной документации ООО КОРТЕРИС"
requires-python = ">=3.12,<3.14"
dependencies = [
  "PySide6>=6.8,<7",
  "SQLAlchemy>=2.0,<3",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "pypdf>=5,<7",
  "Jinja2>=3.1,<4",
  "platformdirs>=4.3,<5",
  "keyring>=25,<26",
  "cryptography>=48.0.1,<49",
  "py7zr>=1.1.3,<2",
  "rarfile>=4.2,<5",
  "Pillow>=12.3,<13",
  "httpx>=0.27,<1",
  "certifi>=2024.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
  "mypy>=1.13,<2",
  "pip-audit>=2.7,<3",
  "pyinstaller>=6.11,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "demo_output*"]

[tool.pytest.ini_options]
pythonpath=["."]
testpaths=["tests"]

[tool.ruff]
line-length=100
target-version="py312"

[tool.mypy]
python_version = "3.12"
files = [
  "app/core/json_serialization.py",
  "app/core/ai/orchestrator.py",
  "app/core/ai/provider_selection.py",
  "app/tenders/provider_base.py",
  "app/tenders/providers/mos_supplier_config.py",
  "app/tenders/collector/vertical_source_verification.py",
  "app/tenders/full_analysis.py",
  "app/tenders/search_runtime.py",
  "app/ui/ai_provider_settings.py",
]
check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
